fix color contrast probleme

--- a/lesson3/css/lesson3.css
+++ b/lesson3/css/lesson3.css
@@ -39,7 +39,7 @@ h1{
 
 h2 {
         display: block;
-        font-size: 1em;
+        font-size: 2em;
         font-weight: bold;
         color: white;
 }
@@ -52,6 +52,8 @@ p{
 }
 .myfooter {
     color: white;
+    font-size: 1.5em;
+
 }
 
 
